<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroupSensorDelay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioFastest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_delay_fastest" />

        <RadioButton
            android:id="@+id/radioGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_delay_game" />

        <RadioButton
            android:id="@+id/radioNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_delay_normal" />

        <RadioButton
            android:id="@+id/radioUI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_delay_ui" />
	</RadioGroup>

	<Button
		android:id="@+id/sensorsSwitch"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/sensors_switch_off" />

</LinearLayout>